Fix alignment issue for bullet points and source text, improve UI

--- a/src/App.css
+++ b/src/App.css
@@ -1,257 +1,11 @@
-/* src/App.css */
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  background-color: #f4f4f4;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.header {
-  background-color: #c3cea3;
-  color: white;
-  padding: 15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 30px;
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-}
-
-.title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-left: 15px;
-  display: flex;
-  align-items: center;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropbtn {
-  background-color: #44656c;
-  color: white;
-  font-size: 14px;
-  padding: 8px 12px;
-  border: 1px solid #076900;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #c3cea3;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 2; 
-  width: auto;
-  min-width: 80px;
-  border: 1px solid #4b6e54;
-  border-radius: 5px;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 6px 8px;
-  text-decoration: none;
-  display: block;
-  font-size: 12px;
-}
-
-.dropdown-content a:hover {
-  background-color: #666;
-}
-
-.logo-img {
-  width: 60px;
-  height: auto;
-  margin-left: 40px;
-  position: relative;
-  display: inline-block;
-  mask-image: radial-gradient(circle, white 60%, transparent 100%);
-  -webkit-mask-image: radial-gradient(circle, white 60%, transparent 100%);
-}
-
-.main {
-  flex: 1;
-  padding: 10px;
-  background: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.municipality-box {
-  background-color: #f9f9f9;
-  padding: 0px;
-  margin: 0px 0;
-  border-radius: 0px;
-  width: 50%;
-  cursor: default;
-}
-
-.municipality-box.adjusted {
-  margin-top: 15px;
-}
-
-.fire-hazard-scale-container {
-  margin-top: -20px;
-  transition: margin-top 0.3s ease; /* Smooth transition for margin change */
-}
-
-.check-button {
-  padding: 3px 7px;
-  font-size: 12px;
-  cursor: pointer;
-  background-color: #41825f;
-  color: white;
-  border: none;
-  border-radius: 2px;
-  transition: background-color 0.3s, transform 0.3s;
-  margin-top: 0px;
-}
-
-.check-button:hover {
-  background-color: #7fb581;
-  transform: scale(1.05);
-}
-
-.fire-image {
-  display: block;
-  margin: 0px auto;
-  max-width: 100%;
-  height: auto;
-  width: 300px;
-  opacity: 0.8;
-  filter: saturate(2);
-}
-
-.image-container {
-  background-color: #f9f9f9;
-  padding: 0px 0;
-}
-
-.result {
-  margin-top: 20px;
-}
-
-.error-message {
-  color: red;
-}
-
-.result-box {
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  padding: 5px;
-  margin: 5px 0;
-  border-radius: 8px;
-  transition: background-color 0.3s;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 100%;
-}
-
-.result-box:hover {
-  background-color: #f9f9f9;
-}
-
-.result-box h3 {
-  margin-top: 0;
-}
-
-.collapsible-header {
-  cursor: pointer;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgba(195, 206, 163, 0.9);
-  border-radius: 5px;
-  color: #424242;
-  width: 100%;
-  height: 20px;
-  box-sizing: border-box;
-}
-
-.collapsible-header i {
-  transition: transform 0.3s;
-}
-
-.collapsible-content {
-  padding: 10px;
-  display: none;
-  font-size: 16px;
-  background-color: rgba(255, 255, 255, 0.8);
-}
-.collapsible-content.show {
-  display: block;
-}
-
-.detailed-info-box {
-  font-size: 14px;
-}
-
-.detailed-info-text-box {
-  font-size: 14px;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  padding: 5px;
-  margin: 5px 0;
-  border-radius: 8px;
-  transition: background-color 0.3s;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 100%;
-}
-
-.detailed-info-text-box:hover {
-  background-color: #f9f9f9;
-}
-
-.last-updated {
-  font-size: 7px;
-  color: #666;
-  margin-top: 0px;
-}
-
-.footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-@media (min-width: 769px) {
-  .main {
-    max-width: 800px;
-    padding: 20px;
-  }
-
-  .header, .footer {
-    text-align: center;
-    padding: 20px;
-  }
-}
-
+/* Add any global styles specific to the App */
 .form-container {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 20px;
-  width: 100%;
-  padding-left: 10px;
+  margin-bottom: 0px;
+  width: 50%;
+  padding-left: 0px;
 }
 
 .form-container form {
@@ -263,35 +17,35 @@ body {
   margin-right: 10px;
 }
 
-  .suggestions {
-    border: 1px solid #ddd;
-    max-height: 100px;
-    overflow-y: auto;
-    background-color: #fff;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 45%;
-    position: absolute;
-    z-index: 1;
-  }
+.suggestions {
+  border: 1px solid #ddd;
+  max-height: 100px;
+  overflow-y: auto;
+  background-color: #fff;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 45%;
+  position: absolute;
+  z-index: 1;
+}
 
-  .suggestions li {
-    padding: 3px;
-    cursor: pointer;
-  }
+.suggestions li {
+  padding: 3px;
+  cursor: pointer;
+}
 
-  .suggestions li.suggestion-active {
-    background-color: #f4f4f4;
-  }
+.suggestions li.suggestion-active {
+  background-color: #f4f4f4;
+}
 
-  .autocomplete-container {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-  }
+.autocomplete-container {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
 
-  .autocomplete-input {
+.autocomplete-input {
   width: 50%; 
   padding: 4px; 
   border: 1px solid #ddd;
@@ -299,41 +53,42 @@ body {
   box-sizing: border-box;
   font-size: 16px; 
   height: 40px; 
-  }
-  .autocomplete-suggestions {
-    position: absolute;
-    border: 1px solid #ddd;
-    background: white;
-    z-index: 1;
-    width: 100%;
-    max-height: 150px;
-    overflow-y: auto;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    box-sizing: border-box;
-  }
+}
 
-  .autocomplete-suggestion {
-    padding: 10px;
-    cursor: pointer;
-  }
+.autocomplete-suggestions {
+  position: absolute;
+  border: 1px solid #ddd;
+  background: white;
+  z-index: 1;
+  width: 100%;
+  max-height: 150px;
+  overflow-y: auto;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+}
 
-  .autocomplete-suggestion-active {
-    background-color: #f4f4f4;
-  }
+.autocomplete-suggestion {
+  padding: 10px;
+  cursor: pointer;
+}
 
-  .autocomplete-suggestions::-webkit-scrollbar {
-    width: 8px;
-  }
+.autocomplete-suggestion-active {
+  background-color: #f4f4f4;
+}
 
-  .autocomplete-suggestions::-webkit-scrollbar-thumb {
-    background: #ccc;
-    border-radius: 4px;
-  }
+.autocomplete-suggestions::-webkit-scrollbar {
+  width: 8px;
+}
 
-  .autocomplete-suggestions::-webkit-scrollbar-thumb:hover {
-    background: #b3b3b3;
-  }
+.autocomplete-suggestions::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
 
-  .autocomplete-suggestions::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
+.autocomplete-suggestions::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+}
+
+.autocomplete-suggestions::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
